Version 0.3.0 (2014-07-02)
--------------------------
Added configurable list of domains which should count as "internal" (#18)
Made tests JSON-driven (#4)
Added CHANGELOG (#68)